# OldDeepLearning

./: CMakeLists.txt
AANN/: Learn.cpp  Learn.h  aann.cxx  ocl_base.cpp  ocl_base.h
AANN/Network/: NeuralNetwork.cpp  NeuralNetwork.h
AANN/Network/Supervised/: SupervisedNeuralNetwork.cpp  SupervisedNeuralNetwork.h
AANN/Network/Supervised/Performance/: PerformanceNeuralNetwork.cpp  PerformanceNeuralNetwork.h
Backpropagation/Demo/: main.cpp
CostFunctoinSupervisedLearning/: ConjugateGradientLearn.cpp  ConjugateGradientLearn.h  Learn.cpp  Learn.h  OpenCLCostFunctionRouter.cpp  OpenCLCostFunctionRouter.h  data_test02.txt  main.cpp
HandwrittenNumbersDetection/cpp/: Handwritten_main.cpp  Learn.cpp  Learn.h
OCL/: kernel.cpp  kernel.h
PerceptronNeuralNetwork/Neurons/: DEFINITIONS.h  PerceptronNetwork.cpp  PerceptronNetwork.h  PerceptronNeuron.cpp  PerceptronNeuron.h  Perceptron_main.cpp
PerceptronNeuralNetwork/Supervised/PseudionRule-DigitalNumberDetection/: DEFINITIONS.h  Learn.cpp  Learn.h  Matrix.h  SupervisedHebbianNetwork.cpp  SupervisedHebbianNetwork.h  SupervisedHebbianNeuron.cpp  SupervisedHebbianNeuron.h  main.cpp
Widrow-Hoff-Learning/ADALINE-Network/LMS-Learning-Algorithm/: Learn.cpp  Learn.h  main.cpp
